--- a/README
+++ b/README
@@ -6,6 +6,9 @@
 # zorgverzekering
 https://nl.wikipedia.org/wiki/Zorgverzekering_(Nederland)
 
+# economic warfare
+https://en.wikipedia.org/wiki/Economic_warfare
+
 # liquidatie
 https://nl.wikipedia.org/wiki/Liquidatie_(moord)
 
