--- a/README
+++ b/README
@@ -12,5 +12,8 @@ https://en.wikipedia.org/wiki/Economic_warfare
 # liquidatie
 https://nl.wikipedia.org/wiki/Liquidatie_(moord)
 
+# wet werk en bihstand
+https://nl.wikipedia.org/wiki/Wet_werk_en_bijstand
+
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
